--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,279 +1,263 @@
 <ion-header>
-    <ion-toolbar>
-        <ion-searchbar placeholder="{{'Search service'| translate}}"></ion-searchbar>
-        <div class="logo" (click)="goSearchResults()"><span>U</span><span>b</span><span>z</span><span>i</span><span>l</span> <span>|</span></div>
-    </ion-toolbar>
+  <ion-toolbar>
+    <ion-searchbar placeholder="{{'Search service'| translate}}"></ion-searchbar>
+    <div class="logo" (click)="goSearchResults()"><span>U</span><span>b</span><span>z</span><span>i</span><span>l</span>
+      <span>|</span></div>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content>
-    
-        <ion-segment [(ngModel)]="segment">
-        <ion-segment-button value="services">
-            {{'Close-services' | translate}}
-        </ion-segment-button>
-        <ion-segment-button value="qoutes">
-            {{'Get-qoutes' | translate}}
-        </ion-segment-button>
-        <ion-segment-button value="book">
-            {{'Book-schedule' | translate}}
-        </ion-segment-button>
-    </ion-segment>
-    <div [ngSwitch]="segment" class="my-segment">
-        <ion-grid  *ngSwitchCase="'services'">
-            <ion-row>
-                <ion-col  col-4 class="category-col">
-                    <div class="category" (click)="gosubcategory('services')">
-                        <div class='category-img'>
-                            <img src="assets/img/png/homeserv.png" alt=""/>
-                        </div>
-                        <div class="title">
-                            <h4>{{'Home_services' | translate}}</h4>
-                        </div>
-                        <div class="wight-effect"></div>
-                    </div>
-                </ion-col>
+
+  <ion-segment [(ngModel)]="segment">
+    <ion-segment-button value="services">
+      {{'Close-services' | translate}}
+    </ion-segment-button>
+    <ion-segment-button value="qoutes">
+      {{'Get-qoutes' | translate}}
+    </ion-segment-button>
+    <ion-segment-button value="book">
+      {{'Book-schedule' | translate}}
+    </ion-segment-button>
+  </ion-segment>
+  <div [ngSwitch]="segment" class="my-segment">
+    <ion-grid *ngSwitchCase="'services'">
+      <ion-row>
+        <ion-col col-4 class="category-col">
+          <div class="category" (click)="gosubcategory('services')">
+            <div class='category-img'>
+              <img src="assets/img/png/homeserv.png" alt=""/>
+            </div>
+            <div class="title">
+              <h4>{{'Home_services' | translate}}</h4>
+            </div>
+            <div class="wight-effect"></div>
+          </div>
+        </ion-col>
 
 
-
-                <ion-col  col-4 class="category-col">
-                    <div class="category" (click)="gosubcategory('services')">
-                        <div class='category-img'>
-                            <img src="assets/img/png/wedding.png" alt=""/>
-                        </div>
-                        <div class="title">
-                            <h4>{{'Events_Weddings' | translate}}</h4>
-                        </div>
-                        <div class="wight-effect"></div>
-                    </div>
-                </ion-col>
-
+        <ion-col col-4 class="category-col">
+          <div class="category" (click)="gosubcategory('services')">
+            <div class='category-img'>
+              <img src="assets/img/png/wedding.png" alt=""/>
+            </div>
+            <div class="title">
+              <h4>{{'Events_Weddings' | translate}}</h4>
+            </div>
+            <div class="wight-effect"></div>
+          </div>
+        </ion-col>
 
 
-                <ion-col  col-4 class="category-col">
-                    <div class="category" (click)="gosubcategory('services')">
-                        <div class='category-img'>
-                            <img src="assets/img/png/doctor.png" alt=""/>
-                        </div>
-                        <div class="title">
-                            <h4>{{'Vezeta_doctors' | translate}}</h4>
-                        </div>
-                        <div class="wight-effect"></div>
-                    </div>
-                </ion-col>
+        <ion-col col-4 class="category-col">
+          <div class="category" (click)="gosubcategory('services')">
+            <div class='category-img'>
+              <img src="assets/img/png/doctor.png" alt=""/>
+            </div>
+            <div class="title">
+              <h4>{{'Vezeta_doctors' | translate}}</h4>
+            </div>
+            <div class="wight-effect"></div>
+          </div>
+        </ion-col>
 
 
-
-                <ion-col  col-4 class="category-col">
-                    <div class="category" (click)="gosubcategory('services')">
-                        <div class='category-img'>
-                            <img src="assets/img/png/accesory.png" alt=""/>
-                        </div>
-                        <div class="title">
-                            <h4>{{'Personal' | translate}}</h4>
-                        </div>
-                        <div class="wight-effect"></div>
-                    </div>
-                </ion-col>
-
+        <ion-col col-4 class="category-col">
+          <div class="category" (click)="gosubcategory('services')">
+            <div class='category-img'>
+              <img src="assets/img/png/accesory.png" alt=""/>
+            </div>
+            <div class="title">
+              <h4>{{'Personal' | translate}}</h4>
+            </div>
+            <div class="wight-effect"></div>
+          </div>
+        </ion-col>
 
 
-                <ion-col  col-4 class="category-col">
-                    <div class="category" (click)="gosubcategory('services')">
-                        <div class='category-img'>
-                            <img src="assets/img/png/24-hours.png" alt=""/>
-                        </div>
-                        <div class="title">
-                            <h4>{{'On_demand' | translate}}</h4>
-                        </div>
-                        <div class="wight-effect"></div>
-                    </div>
-                </ion-col>
+        <ion-col col-4 class="category-col">
+          <div class="category" (click)="gosubcategory('services')">
+            <div class='category-img'>
+              <img src="assets/img/png/24-hours.png" alt=""/>
+            </div>
+            <div class="title">
+              <h4>{{'On_demand' | translate}}</h4>
+            </div>
+            <div class="wight-effect"></div>
+          </div>
+        </ion-col>
 
 
-
-                <ion-col  col-4 class="category-col">
-                    <div class="category" (click)="gosubcategory('services')">
-                        <div class='category-img'>
-                            <img src="assets/img/png/customer-service.png" alt=""/>
-                        </div>
-                        <div class="title">
-                            <h4>{{'Business_services' | translate}}</h4>
-                        </div>
-                        <div class="wight-effect"></div>
-                    </div>
-                </ion-col>
-
+        <ion-col col-4 class="category-col">
+          <div class="category" (click)="gosubcategory('services')">
+            <div class='category-img'>
+              <img src="assets/img/png/customer-service.png" alt=""/>
+            </div>
+            <div class="title">
+              <h4>{{'Business_services' | translate}}</h4>
+            </div>
+            <div class="wight-effect"></div>
+          </div>
+        </ion-col>
 
 
-
-                <ion-col  col-4 class="category-col">
-                    <div class="category" (click)="gosubcategory('services')">
-                        <div class='category-img'>
-                            <img src="assets/img/png/homeserv.png" alt=""/>
-                        </div>
-                        <div class="title">
-                            <h4>{{'Home_services' | translate}}</h4>
-                        </div>
-                        <div class="wight-effect"></div>
-                    </div>
-                </ion-col>
-
+        <ion-col col-4 class="category-col">
+          <div class="category" (click)="gosubcategory('services')">
+            <div class='category-img'>
+              <img src="assets/img/png/homeserv.png" alt=""/>
+            </div>
+            <div class="title">
+              <h4>{{'Home_services' | translate}}</h4>
+            </div>
+            <div class="wight-effect"></div>
+          </div>
+        </ion-col>
 
 
-                <ion-col  col-4 class="category-col">
-                    <div class="category" (click)="gosubcategory('services')">
-                        <div class='category-img'>
-                            <img src="assets/img/png/wedding.png" alt=""/>
-                        </div>
-                        <div class="title">
-                            <h4>{{'Events_Weddings' | translate}}</h4>
-                        </div>
-                        <div class="wight-effect"></div>
-                    </div>
-                </ion-col>
+        <ion-col col-4 class="category-col">
+          <div class="category" (click)="gosubcategory('services')">
+            <div class='category-img'>
+              <img src="assets/img/png/wedding.png" alt=""/>
+            </div>
+            <div class="title">
+              <h4>{{'Events_Weddings' | translate}}</h4>
+            </div>
+            <div class="wight-effect"></div>
+          </div>
+        </ion-col>
 
 
-
-                <ion-col  col-4 class="category-col">
-                    <div class="category" (click)="gosubcategory('services')">
-                        <div class='category-img'>
-                            <img src="assets/img/png/doctor.png" alt=""/>
-                        </div>
-                        <div class="title">
-                            <h4>{{'Vezeta_doctors' | translate}}</h4>
-                        </div>
-                        <div class="wight-effect"></div>
-                    </div>
-                </ion-col>
-
+        <ion-col col-4 class="category-col">
+          <div class="category" (click)="gosubcategory('services')">
+            <div class='category-img'>
+              <img src="assets/img/png/doctor.png" alt=""/>
+            </div>
+            <div class="title">
+              <h4>{{'Vezeta_doctors' | translate}}</h4>
+            </div>
+            <div class="wight-effect"></div>
+          </div>
+        </ion-col>
 
 
-                <ion-col  col-4 class="category-col">
-                    <div class="category" (click)="gosubcategory('services')">
-                        <div class='category-img'>
-                            <img src="assets/img/png/accesory.png" alt=""/>
-                        </div>
-                        <div class="title">
-                            <h4>{{'Personal' | translate}}</h4>
-                        </div>
-                        <div class="wight-effect"></div>
-                    </div>
-                </ion-col>
+        <ion-col col-4 class="category-col">
+          <div class="category" (click)="gosubcategory('services')">
+            <div class='category-img'>
+              <img src="assets/img/png/accesory.png" alt=""/>
+            </div>
+            <div class="title">
+              <h4>{{'Personal' | translate}}</h4>
+            </div>
+            <div class="wight-effect"></div>
+          </div>
+        </ion-col>
 
 
-
-                <ion-col  col-4 class="category-col">
-                    <div class="category" (click)="gosubcategory('services')">
-                        <div class='category-img'>
-                            <img src="assets/img/png/24-hours.png" alt=""/>
-                        </div>
-                        <div class="title">
-                            <h4>{{'On_demand' | translate}}</h4>
-                        </div>
-                        <div class="wight-effect"></div>
-                    </div>
-                </ion-col>
-
+        <ion-col col-4 class="category-col">
+          <div class="category" (click)="gosubcategory('services')">
+            <div class='category-img'>
+              <img src="assets/img/png/24-hours.png" alt=""/>
+            </div>
+            <div class="title">
+              <h4>{{'On_demand' | translate}}</h4>
+            </div>
+            <div class="wight-effect"></div>
+          </div>
+        </ion-col>
 
 
-                <ion-col  col-4 class="category-col">
-                    <div class="category" (click)="gosubcategory('services')">
-                        <div class='category-img'>
-                            <img src="assets/img/png/customer-service.png" alt=""/>
-                        </div>
-                        <div class="title">
-                            <h4>{{'Business_services' | translate}}</h4>
-                        </div>
-                        <div class="wight-effect"></div>
-                    </div>
-                </ion-col>
+        <ion-col col-4 class="category-col">
+          <div class="category" (click)="gosubcategory('services')">
+            <div class='category-img'>
+              <img src="assets/img/png/customer-service.png" alt=""/>
+            </div>
+            <div class="title">
+              <h4>{{'Business_services' | translate}}</h4>
+            </div>
+            <div class="wight-effect"></div>
+          </div>
+        </ion-col>
 
 
-            </ion-row>
-        </ion-grid>
+      </ion-row>
+    </ion-grid>
 
 
-        <ion-grid  *ngSwitchCase="'qoutes'">
-            <ion-row>
-                <ion-col  col-4 class="category-col">
-                    <div class="category" (click)="gosubcategory('qoutes')">
-                        <div class='category-img'>
-                            <img src="assets/img/png/homeserv.png" alt=""/>
-                        </div>
-                        <div class="title">
-                            <h4>{{'Home_services' | translate}}</h4>
-                        </div>
-                        <div class="wight-effect"></div>
-                    </div>
-                </ion-col>
+    <ion-grid *ngSwitchCase="'qoutes'">
+      <ion-row>
+        <ion-col col-4 class="category-col">
+          <div class="category" (click)="gosubcategory('qoutes')">
+            <div class='category-img'>
+              <img src="assets/img/png/homeserv.png" alt=""/>
+            </div>
+            <div class="title">
+              <h4>{{'Home_services' | translate}}</h4>
+            </div>
+            <div class="wight-effect"></div>
+          </div>
+        </ion-col>
 
-                <ion-col  col-4 class="category-col">
-                    <div class="category" (click)="gosubcategory('qoutes')">
-                        <div class='category-img'>
-                            <img src="assets/img/png/24-hours.png" alt=""/>
-                        </div>
-                        <div class="title">
-                            <h4>{{'On_demand' | translate}}</h4>
-                        </div>
-                        <div class="wight-effect"></div>
-                    </div>
-                </ion-col>
-
-
-
-                <ion-col  col-4 class="category-col">
-                    <div class="category" (click)="gosubcategory('qoutes')">
-                        <div class='category-img'>
-                            <img src="assets/img/png/customer-service.png" alt=""/>
-                        </div>
-                        <div class="title">
-                            <h4>{{'Business_services' | translate}}</h4>
-                        </div>
-                        <div class="wight-effect"></div>
-                    </div>
-                </ion-col>
+        <ion-col col-4 class="category-col">
+          <div class="category" (click)="gosubcategory('qoutes')">
+            <div class='category-img'>
+              <img src="assets/img/png/24-hours.png" alt=""/>
+            </div>
+            <div class="title">
+              <h4>{{'On_demand' | translate}}</h4>
+            </div>
+            <div class="wight-effect"></div>
+          </div>
+        </ion-col>
 
 
-            </ion-row>
-        </ion-grid>
+        <ion-col col-4 class="category-col">
+          <div class="category" (click)="gosubcategory('qoutes')">
+            <div class='category-img'>
+              <img src="assets/img/png/customer-service.png" alt=""/>
+            </div>
+            <div class="title">
+              <h4>{{'Business_services' | translate}}</h4>
+            </div>
+            <div class="wight-effect"></div>
+          </div>
+        </ion-col>
 
 
-
-        <ion-grid  *ngSwitchCase="'book'">
-            <ion-row>
-
+      </ion-row>
+    </ion-grid>
 
 
-
-                <ion-col  col-6 class="category-col">
-                    <div class="category" (click)="gosubcategory('book')">
-                        <div class='category-img'>
-                            <img src="assets/img/png/doctor.png" alt=""/>
-                        </div>
-                        <div class="title">
-                            <h4>{{'Clinics' | translate}}</h4>
-                        </div>
-                        <div class="wight-effect"></div>
-                    </div>
-                </ion-col>
+    <ion-grid *ngSwitchCase="'book'">
+      <ion-row>
 
 
+        <ion-col col-6 class="category-col">
+          <div class="category" (click)="gosubcategory('book')">
+            <div class='category-img'>
+              <img src="assets/img/png/doctor.png" alt=""/>
+            </div>
+            <div class="title">
+              <h4>{{'Clinics' | translate}}</h4>
+            </div>
+            <div class="wight-effect"></div>
+          </div>
+        </ion-col>
 
-                <ion-col  col-6 class="category-col">
-                    <div class="category" (click)="gosubcategory('book')">
-                        <div class='category-img'>
-                            <img src="assets/img/png/lab.png" alt=""/>
-                        </div>
-                        <div class="title">
-                            <h4>{{'Medical lab' | translate}}</h4>
-                        </div>
-                        <div class="wight-effect"></div>
-                    </div>
-                </ion-col>
 
-            </ion-row>
-        </ion-grid>
-    </div>
+        <ion-col col-6 class="category-col">
+          <div class="category" (click)="gosubcategory('book')">
+            <div class='category-img'>
+              <img src="assets/img/png/lab.png" alt=""/>
+            </div>
+            <div class="title">
+              <h4>{{'Medical lab' | translate}}</h4>
+            </div>
+            <div class="wight-effect"></div>
+          </div>
+        </ion-col>
+
+      </ion-row>
+    </ion-grid>
+  </div>
 
 
 </ion-content>
