--- a/src/pages/projects/projects.html
+++ b/src/pages/projects/projects.html
@@ -9,7 +9,7 @@
 
 
 <ion-content >
-<section class="segment-holder">
+<section class="segment-holder" [ngClass]="{'padding-vertical':isIos}">
   <ion-segment [(ngModel)]="projectID">
 
 
@@ -42,7 +42,7 @@
 
   <ion-list *ngIf="projectID === 'myProjects'">
     <ion-item>
-      <ion-thumbnail item-start (click)="goProfilePage()">
+      <ion-thumbnail item-start (click)="navigateTo('ProfilePage')">
         <img src="assets/img/png/doctor.png">
       </ion-thumbnail>
       <h2>{{'Vezeta_doctors'|translate}}<span item-end class="time">منذ ساعة</span></h2>
@@ -50,13 +50,13 @@
       <p class="applicants">
         <ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
       <div class="bottom-btn">
-        <button ion-button outline (click)="addreviewmodal()">انهاء</button>
-        <button ion-button outline (click)="goRequestsDetail()">{{'Details'|translate}}</button>
+        <button ion-button outline (click)="navigateTo('AddReview', true)">انهاء</button>
+        <button ion-button outline (click)="navigateTo('RequestsDetail')">{{'Details'|translate}}</button>
       </div>
 
     </ion-item>
     <ion-item>
-      <ion-thumbnail item-start (click)="goProfilePage()">
+      <ion-thumbnail item-start (click)="navigateTo('ProfilePage')">
         <img src="assets/img/png/iron.png">
       </ion-thumbnail>
       <h2>{{'Home_services'|translate}}<span item-end class="time">منذ ساعة</span></h2>
@@ -64,13 +64,13 @@
       <p class="applicants">
         <ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
       <div class="bottom-btn">
-        <button ion-button outline (click)="addreviewmodal()">انهاء</button>
-        <button ion-button outline (click)="goRequestsDetail()">{{'Details'|translate}}</button>
+        <button ion-button outline (click)="navigateTo('AddReview', true)">انهاء</button>
+        <button ion-button outline (click)="navigateTo('RequestsDetail')">{{'Details'|translate}}</button>
       </div>
 
     </ion-item>
     <ion-item>
-      <ion-thumbnail item-start (click)="goProfilePage()">
+      <ion-thumbnail item-start (click)="navigateTo('ProfilePage')">
         <img src="assets/img/png/maid.png">
       </ion-thumbnail>
       <h2>{{'Home_services'|translate}}<span item-end class="time">منذ ساعة</span></h2>
@@ -78,13 +78,13 @@
       <p class="applicants">
         <ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
       <div class="bottom-btn">
-        <button ion-button outline (click)="addreviewmodal()">انهاء</button>
-        <button ion-button outline (click)="goRequestsDetail()">{{'Details'|translate}}</button>
+        <button ion-button outline (click)="navigateTo('AddReview', true)">انهاء</button>
+        <button ion-button outline (click)="navigateTo('RequestsDetail')">{{'Details'|translate}}</button>
       </div>
 
     </ion-item>
     <ion-item>
-      <ion-thumbnail item-start (click)="goProfilePage()">
+      <ion-thumbnail item-start (click)="navigateTo('ProfilePage')">
         <img src="assets/img/png/wedding.png">
       </ion-thumbnail>
       <h2>{{'Events_Weddings'|translate}}<span item-end class="time">منذ ساعة</span></h2>
@@ -92,8 +92,8 @@
       <p class="applicants">
         <ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
       <div class="bottom-btn">
-        <button ion-button outline (click)="addreviewmodal()">انهاء</button>
-        <button ion-button outline (click)="goRequestsDetail()">{{'Details'|translate}}</button>
+        <button ion-button outline (click)="navigateTo('AddReview', true)">انهاء</button>
+        <button ion-button outline (click)="navigateTo('RequestsDetail')">{{'Details'|translate}}</button>
       </div>
 
     </ion-item>
@@ -109,7 +109,7 @@
 
 <ion-list *ngIf="projectID==='recivedProjects'">
   <ion-item>
-    <ion-thumbnail item-start (click)="goProfilePage()">
+    <ion-thumbnail item-start (click)="navigateTo('ProfilePage')">
       <img src="assets/img/12.jpg">
     </ion-thumbnail>
     <h2>{{'Hussein Mahmoud'|translate}}<span item-end class="time">منذ ساعة</span></h2>
@@ -117,12 +117,12 @@
     <p class="applicants">
       <ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
     <div class="bottom-btn">
-      <button ion-button outline (click)="goRequestsDetail()">{{'Details'|translate}}</button>
+      <button ion-button outline (click)="navigateTo('RequestsDetail')">{{'Details'|translate}}</button>
     </div>
 
   </ion-item>
   <ion-item>
-    <ion-thumbnail item-start (click)="goProfilePage()">
+    <ion-thumbnail item-start (click)="navigateTo('ProfilePage')">
       <img src="assets/img/13.jpg">
     </ion-thumbnail>
     <h2>{{'Hussein Mahmoud'|translate}}<span item-end class="time">منذ ساعة</span></h2>
@@ -130,12 +130,12 @@
     <p class="applicants">
       <ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
     <div class="bottom-btn">
-      <button ion-button outline (click)="goRequestsDetail()">{{'Details'|translate}}</button>
+      <button ion-button outline (click)="navigateTo('RequestsDetail')">{{'Details'|translate}}</button>
     </div>
 
   </ion-item>
   <ion-item>
-    <ion-thumbnail item-start (click)="goProfilePage()">
+    <ion-thumbnail item-start (click)="navigateTo('ProfilePage')">
       <img src="assets/img/14.jpg">
     </ion-thumbnail>
     <h2>{{'Hussein Mahmoud'|translate}}<span item-end class="time">منذ ساعة</span></h2>
@@ -143,12 +143,12 @@
     <p class="applicants">
       <ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
     <div class="bottom-btn">
-      <button ion-button outline (click)="goRequestsDetail()">{{'Details'|translate}}</button>
+      <button ion-button outline (click)="navigateTo('RequestsDetail')">{{'Details'|translate}}</button>
     </div>
 
   </ion-item>
   <ion-item>
-    <ion-thumbnail item-start (click)="goProfilePage()">
+    <ion-thumbnail item-start (click)="navigateTo('ProfilePage')">
       <img src="assets/img/15.jpg">
     </ion-thumbnail>
     <h2>{{'Hussein Mahmoud'|translate}}<span item-end class="time">منذ ساعة</span></h2>
@@ -156,12 +156,12 @@
     <p class="applicants">
       <ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
     <div class="bottom-btn">
-      <button ion-button outline (click)="goRequestsDetail()">{{'Details'|translate}}</button>
+      <button ion-button outline (click)="navigateTo('RequestsDetail')">{{'Details'|translate}}</button>
     </div>
 
   </ion-item>
   <ion-item>
-    <ion-thumbnail item-start (click)="goProfilePage()">
+    <ion-thumbnail item-start (click)="navigateTo('ProfilePage')">
       <img src="assets/img/16.jpg">
     </ion-thumbnail>
     <h2>{{'Hussein Mahmoud'|translate}}<span item-end class="time">منذ ساعة</span></h2>
@@ -169,12 +169,12 @@
     <p>
       <ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
     <div class="bottom-btn">
-      <button ion-button outline (click)="goRequestsDetail()">{{'Details'|translate}}</button>
+      <button ion-button outline (click)="navigateTo('RequestsDetail')">{{'Details'|translate}}</button>
     </div>
 
   </ion-item>
   <ion-item>
-    <ion-thumbnail item-start (click)="goProfilePage()">
+    <ion-thumbnail item-start (click)="navigateTo('ProfilePage')">
       <img src="assets/img/17.jpg">
     </ion-thumbnail>
     <h2>{{'Hussein Mahmoud'|translate}}<span item-end class="time">منذ ساعة</span></h2>
@@ -182,7 +182,7 @@
     <p class="applicants">
       <ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
     <div class="bottom-btn">
-      <button ion-button outline (click)="goRequestsDetail()">{{'Details'|translate}}</button>
+      <button ion-button outline (click)="navigateTo('RequestsDetail')">{{'Details'|translate}}</button>
     </div>
 
   </ion-item>
@@ -197,7 +197,7 @@
 -->
 <ion-list *ngIf="projectID === 'impProjects'">
   <ion-item>
-    <ion-thumbnail item-start (click)="goProfilePage()">
+    <ion-thumbnail item-start (click)="navigateTo('ProfilePage')">
       <img src="assets/img/12.jpg">
     </ion-thumbnail>
     <h2>{{'Hussein Mahmoud'|translate}}<span item-end class="time">منذ ساعة</span></h2>
@@ -205,12 +205,12 @@
     <p class="applicants">
       <ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
     <div class="bottom-btn">
-      <button ion-button outline (click)="goRequestsDetail()">{{'Details'|translate}}</button>
+      <button ion-button outline (click)="navigateTo('RequestsDetail')">{{'Details'|translate}}</button>
     </div>
 
   </ion-item>
   <ion-item>
-    <ion-thumbnail item-start (click)="goProfilePage()">
+    <ion-thumbnail item-start (click)="navigateTo('ProfilePage')">
       <img src="assets/img/13.jpg">
     </ion-thumbnail>
     <h2>{{'Hussein Mahmoud'|translate}}<span item-end class="time">منذ ساعة</span></h2>
@@ -218,62 +218,11 @@
     <p class="applicants">
       <ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
     <div class="bottom-btn">
-      <button ion-button outline (click)="goRequestsDetail()">{{'Details'|translate}}</button>
+      <button ion-button outline (click)="navigateTo('RequestsDetail')">{{'Details'|translate}}</button>
     </div>
 
   </ion-item>
-  <ion-item>
-    <ion-thumbnail item-start (click)="goProfilePage()">
-      <img src="assets/img/14.jpg">
-    </ion-thumbnail>
-    <h2>{{'Hussein Mahmoud'|translate}}<span item-end class="time">منذ ساعة</span></h2>
-    <h4>{{'Request title'|translate}}</h4>
-    <p class="applicants">
-      <ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
-    <div class="bottom-btn">
-      <button ion-button outline (click)="goRequestsDetail()">{{'Details'|translate}}</button>
-    </div>
-
-  </ion-item>
-  <ion-item>
-    <ion-thumbnail item-start (click)="goProfilePage()">
-      <img src="assets/img/15.jpg">
-    </ion-thumbnail>
-    <h2>{{'Hussein Mahmoud'|translate}}<span item-end class="time">منذ ساعة</span></h2>
-    <h4>{{'Request title'|translate}}</h4>
-    <p class="applicants">
-      <ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
-    <div class="bottom-btn">
-      <button ion-button outline (click)="goRequestsDetail()">{{'Details'|translate}}</button>
-    </div>
-
-  </ion-item>
-  <ion-item>
-    <ion-thumbnail item-start (click)="goProfilePage()">
-      <img src="assets/img/16.jpg">
-    </ion-thumbnail>
-    <h2>{{'Hussein Mahmoud'|translate}}<span item-end class="time">منذ ساعة</span></h2>
-    <h4>{{'Request title'|translate}}</h4>
-    <p class="applicants">
-      <ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
-    <div class="bottom-btn">
-      <button ion-button outline (click)="goRequestsDetail()">{{'Details'|translate}}</button>
-    </div>
-
-  </ion-item>
-  <ion-item>
-    <ion-thumbnail item-start (click)="goProfilePage()">
-      <img src="assets/img/17.jpg">
-    </ion-thumbnail>
-    <h2>{{'Hussein Mahmoud'|translate}}<span item-end class="time">منذ ساعة</span></h2>
-    <h4>{{'Request title'|translate}}</h4>
-    <p class="applicants">
-      <ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
-    <div class="bottom-btn">
-      <button ion-button outline (click)="goRequestsDetail()">{{'Details'|translate}}</button>
-    </div>
-
-  </ion-item>
+  
 </ion-list>
 
 
@@ -287,7 +236,7 @@
 <ion-list *ngIf="projectID === 'pendProjects'">
   
   <ion-item>
-    <ion-thumbnail item-start (click)="goProfilePage()">
+    <ion-thumbnail item-start (click)="navigateTo('ProfilePage')">
       <img src="assets/img/13.jpg">
     </ion-thumbnail>
     <h2>{{'Hussein Mahmoud'|translate}}<span item-end class="time">منذ ساعة</span></h2>
@@ -295,12 +244,12 @@
     <p class="applicants">
       <ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
     <div class="bottom-btn">
-      <button ion-button outline (click)="goRequestsDetail()">{{'Details'|translate}}</button>
+      <button ion-button outline (click)="navigateTo('RequestsDetail')">{{'Details'|translate}}</button>
     </div>
 
   </ion-item>
   <ion-item>
-    <ion-thumbnail item-start (click)="goProfilePage()">
+    <ion-thumbnail item-start (click)="navigateTo('ProfilePage')">
       <img src="assets/img/14.jpg">
     </ion-thumbnail>
     <h2>{{'Hussein Mahmoud'|translate}}<span item-end class="time">منذ ساعة</span></h2>
@@ -308,12 +257,12 @@
     <p class="applicants">
       <ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
     <div class="bottom-btn">
-      <button ion-button outline (click)="goRequestsDetail()">{{'Details'|translate}}</button>
+      <button ion-button outline (click)="navigateTo('RequestsDetail')">{{'Details'|translate}}</button>
     </div>
 
   </ion-item>
   <ion-item>
-    <ion-thumbnail item-start (click)="goProfilePage()">
+    <ion-thumbnail item-start (click)="navigateTo('ProfilePage')">
       <img src="assets/img/15.jpg">
     </ion-thumbnail>
     <h2>{{'Hussein Mahmoud'|translate}}<span item-end class="time">منذ ساعة</span></h2>
@@ -321,12 +270,12 @@
     <p>
       <ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
     <div class="bottom-btn">
-      <button ion-button outline (click)="goRequestsDetail()">{{'Details'|translate}}</button>
+      <button ion-button outline (click)="navigateTo('RequestsDetail')">{{'Details'|translate}}</button>
     </div>
 
   </ion-item>
   <ion-item>
-    <ion-thumbnail item-start (click)="goProfilePage()">
+    <ion-thumbnail item-start (click)="navigateTo('ProfilePage')">
       <img src="assets/img/16.jpg">
     </ion-thumbnail>
     <h2>{{'Hussein Mahmoud'|translate}}<span item-end class="time">منذ ساعة</span></h2>
@@ -334,12 +283,12 @@
     <p class="applicants">
       <ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
     <div class="bottom-btn">
-      <button ion-button outline (click)="goRequestsDetail()">{{'Details'|translate}}</button>
+      <button ion-button outline (click)="navigateTo('RequestsDetail')">{{'Details'|translate}}</button>
     </div>
 
   </ion-item>
   <ion-item>
-    <ion-thumbnail item-start (click)="goProfilePage()">
+    <ion-thumbnail item-start (click)="navigateTo('ProfilePage')">
       <img src="assets/img/17.jpg">
     </ion-thumbnail>
     <h2>{{'Hussein Mahmoud'|translate}}<span item-end class="time">منذ ساعة</span></h2>
@@ -347,7 +296,7 @@
     <p class="applicants">
       <ion-icon ios="ios-person-outline" md="ios-person-outline"></ion-icon>10 {{'Applicants'|translate}}</p>
     <div class="bottom-btn">
-      <button ion-button outline (click)="goRequestsDetail()">{{'Details'|translate}}</button>
+      <button ion-button outline (click)="navigateTo('RequestsDetail')">{{'Details'|translate}}</button>
     </div>
 
   </ion-item>
